[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragfly-cli"
version = "1.17.1"
description = "RAGfly CLI — operate RAGfly from the terminal and CI (login + cloud API). Lightweight, no desktop dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "CAB Ltda" }]
keywords = ["ragfly", "rag", "cli", "retrieval", "ai", "mcp"]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
    # JWT en el keyring del SO (Keychain macOS, Credential Manager Windows, libsecret Linux)
    "keyring>=25.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.6",
]

[project.urls]
Homepage = "https://ragfly.ai"
Documentation = "https://api.ragfly.ai/docs"

[project.scripts]
ragfly = "ragfly_cli.cli:app"

[tool.setuptools.packages.find]
include = ["ragfly_cli*"]
